# apps/api/src/catalog/catalog.module.ts
@@ -1,9 +1,9 @@
 import { Module } from '@nestjs/common';
-import { CatalogController } from './catalog.controller';
+import { AdminCatalogController, CatalogController } from './catalog.controller';
 import { CatalogService } from './catalog.service';
 
 @Module({
-  controllers: [CatalogController],
+  controllers: [CatalogController, AdminCatalogController],
   providers: [CatalogService],
 })
 export class CatalogModule {}
